# llm-azure-api-embed

./: .gitignore  README.md  build.sh  llm_azure_api_embed.py  publish.sh  pyproject.toml
