[project]
name = "llm-azure-api-embed"
version = "0.1"
description = "Create embeddings using the Azure API"
readme = "README.md"
authors = [{name = "Ronald Luitwieler"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm"
]

[project.urls]
Homepage = "https://github.com/orangewise/llm-azure-api-embed"
Changelog = "https://github.com/orangewise/llm-azure-api-embed/releases"
Issues = "https://github.com/orangewise/llm-azure-api-embed/issues"

[project.entry-points.llm]
azure_api_embed = "llm_azure_api_embed"

